--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,9 +27,24 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 32
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+    buildFeatures {
+        aidl true
     }
+
+    sourceSets {
+        main{
+            java {
+                srcDir 'src/main/kotlin'
+                srcDir 'src/main/aidl'
+            }
+            assets.srcDirs = ['src/main/assets']
+        }
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
     defaultConfig {
         minSdkVersion 16
     }
@@ -45,4 +60,9 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0' // Use the latest version
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+
 }
