--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest package="com.ayeee.blue_print_pos">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.ayeee.blue_print_pos">
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
